--- a/projectbravostyle.css
+++ b/projectbravostyle.css
@@ -11,14 +11,14 @@ html {
     font-family: "Arial", sans-serif;
     font-size: 14px;
     line-height: 1.25;
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);
     position: fixed;
     top: 0;
     width: 100%;
   }
 
 body{
-    background-color: rgb(207, 207, 207);
+  background-color: #4b4b4b;
 }
 
 .title h1{
@@ -26,6 +26,7 @@ body{
  margin-bottom: 2px;
  margin-left: 0;
  margin-right: 0;
+ color: white;
  font-size: 60px;
  font-family: 'Courier New', Courier, monospace;
  text-align: center;
@@ -33,13 +34,14 @@ body{
 
 .header h4{
     display: block;
-    color: #4A4A4A;
+    color: #ffffff;
     font-size: large;
 }
 
 .centrebutton{
-  color:#4A4A4A;
+  color:#ffffff;
   text-align: center;
+  font-weight: bold;
 }
 
 .centrebutton:hover{
@@ -47,7 +49,7 @@ body{
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
   animation-duration: 1.5s;
-      background-color: lightblue;
+      background-color: rgb(110, 110, 110);
 }
 
 .warning{
@@ -61,6 +63,7 @@ body{
 .desc p{
   font-size: 20px;
   text-align: center;
+  color: white;
   margin: 100px 0;
   width: 100%;
 }
@@ -81,7 +84,7 @@ body{
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
   animation-duration: 1.5s;
-      background-color: lightblue;
+      background-color: rgb(109, 109, 109);
 }
   .header a {
     display: block;
