--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ html {
   }
   
   body {
-    background-color: #e7e7e7;
+    background-color: #777777;
   }
   
   h1 {
@@ -18,14 +18,17 @@ html {
     font-size: 24px;
     font-weight: 700;
     line-height: 2.5;
+    color:white;
   }
   
   a {
     text-decoration: none;
+    color: white;
   }
   
   p {
     margin: 16px 0;
+    color:white;
   }
   
   
@@ -34,6 +37,7 @@ html {
 .Box{
     margin-top: 77px;
     border: rgb(85, 85, 85) solid 3px;
+    background-color: rgb(46, 46, 46);
 }
 
   .header {
@@ -41,7 +45,7 @@ html {
     font-size: 14px;
     color:#4A4A4A;
     line-height: 1.25;
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);
     position: fixed;
     top: 0;
     width: 100%;
@@ -56,7 +60,8 @@ html {
       -webkit-animation-duration: 1.5s;
       animation-name: fade;
       animation-duration: 1.5s;
-      background-color: lightblue;
+      color:white;
+      background-color: rgb(134, 134, 134);
   }
 
   .header li.itext{
@@ -67,7 +72,7 @@ html {
   
   .header a {
     display: block;
-    color: #4A4A4A;
+    color: #ffffff;
     font-size: large;
     padding: 30px 20px;
   }
@@ -77,7 +82,9 @@ html {
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 1.5s;
-    background-color: lightblue;
+    z-index: 0;
+    color:white;
+    background-color: rgb(66, 66, 66);
 }
 
 .games{
@@ -86,13 +93,13 @@ html {
   
   .games  a {
     display: block;
-    color: #4A4A4A;
+    color: #ffffff;
     font-size: large;
     padding: 30px 20px;
   }
 
   a.home {
-    color: #4A4A4A;
+    color: #ffffff;
   }
   
   .game{
@@ -100,7 +107,7 @@ html {
       font-family: 'Courier New', Courier, monospace;
       font-weight: bold;
       text-align: center;
-      color:rgb(85, 85, 85);
+      color:rgb(255, 255, 255);
   }
   
   .disc{
@@ -123,6 +130,7 @@ html {
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 1.5s;
+    z-index: 0;
     background-color: #7289d9;
 }
 
@@ -137,14 +145,15 @@ html {
 }
 
   .banner {
-    background-color: lightblue;
+    background-color: rgb(46, 46, 46);
     padding: 100px 0;
     margin-top: 77px;
     text-align: center;
+    color: white;
   }
   
   .welcome {
-    background-color:rgb(85, 85, 85);
+    background-color:rgb(46, 46, 46);
     padding: 100px 0;
     margin-top: 77px;
     text-align: center;
@@ -166,7 +175,7 @@ html {
     border-top: 1px solid #575757;
     border-bottom: 1px solid #575757;
     padding: 10px;
-    color: #575757;
+    color: #ffffff;
   }
   
 
